--- a/index.html
+++ b/index.html
@@ -1,1 +1,485 @@
+<!DOCTYPE html>
+
+<html lang="en-US">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="author" content="ThemeStarz">
+
+<link href="assets/fonts/font-awesome.css" rel="stylesheet" type="text/css">
+<link href="assets/fonts/elegant-fonts.css" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css" type="text/css">
+<link rel="stylesheet" href="assets/css/magnific-popup.css" type="text/css">
+<link rel="stylesheet" href="assets/css/style.css" type="text/css">
+<link rel="icon" href="./assets/img/favicon.ico" type="img/x-icon" />
+<link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon"/>
+<title>Te Studio | Home</title>
+
+<style>
+	body { background-color: #f3f3f3; }
+</style>
+
+<script>
+	var colors = ['255,103,103', '97,223,255', '255,232,88', '141,255,139'];
+</script>
+
+</head>
+
+<body>
+<div class="page-wrapper">
+<header>
+	<div class="brand animate"><a href=""><img src="assets/img/logo.png" alt=""></a></div>
+	<nav>
+		<ul class="navigation animate">
+			<li><a href="" data-toggle="modal" data-target="#modal-about-us">About Us</a></li>
+			<li><a href="" data-toggle="modal" data-target="#modal-our-works">Our Works</a></li>
+			<li><a href="" data-toggle="modal" data-target="#modal-services">Services</a></li>
+			<li><a href="" data-toggle="modal" data-target="#modal-contact-us">Contact</a></li>
+		</ul>
+		<!--end navigation-->
+	</nav>
+</header>
+<div class="content-wrapper">
+	<div class="content-main animate">
+		<div class="container">
+			<h1 class="font-size-90">Te Studio</h1>
+			<h2 class="opacity-60">Handsome Fry Sky!</h2>
+		</div>
+		<!--end container-->
+	</div>
+	<!--end content-main-->
+	<div class="background-wrapper">
+		<canvas id="background-content"></canvas>
+	</div>
+	<!--end background-wrapper-->
+</div>
+<!--end content-wrapper-->
+<footer>
+	<div class="social-icons animate">
+		<a href="#"><i class="fa fa-twitter"></i></a>
+		<a href="#"><i class="fa fa-facebook"></i></a>
+		<a href="#"><i class="fa fa-youtube"></i></a>
+		<a href="#"><i class="fa fa-instagram"></i></a>
+		<a href="#"><i class="fa fa-pinterest"></i></a>
+		<a href="#"><i class="fa fa-google-plus"></i></a>
+	</div>
+	<!--end social-icons-->
+</footer>
+</div>
+<!--end page-wrapper-->
+
+<!-- Modal About Us -->
+<div class="modal fade" id="modal-about-us" tabindex="-1" role="dialog" aria-labelledby="modal-about-us-label">
+<div class="modal-dialog" role="document">
+	<div class="container">
+		<div class="modal-content">
+			<div class="modal-header" data-background-color="#61dfff">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				<h2 class="modal-title" id="modal-about-us-label">关于我们</h2>
+			</div>
+			<div class="modal-body">
+				<div class="row">
+					<div class="col-md-5 col-sm-5">
+						<section>
+							<h3>我们的团队</h3>
+							<div class="row">
+								<div class="col-md-6 col-sm-6">
+									<div class="person">
+										<div class="image">
+											<div class="bg-transfer"><img src="assets/img/person-01.jpg" alt=""></div>
+										</div>
+										<h4>CubWolf</h4>
+										<h5>团队主负责人</h5>
+										<div class="social-icons">
+											<a href="#"><i class="fa fa-twitter"></i></a>
+											<a href="#"><i class="fa fa-facebook"></i></a>
+											<a href="#"><i class="fa fa-youtube"></i></a>
+										</div>
+									</div>
+									<!--end person-->
+								</div>
+								<!--end col-md-6-->
+								<div class="col-md-6 col-sm-6">
+									<div class="person">
+										<div class="image">
+											<div class="bg-transfer"><img src="assets/img/person-02.jpg" alt=""></div>
+										</div>
+										<h4>ColorOSMan</h4>
+										<h5>团队副负责人</h5>
+										<div class="social-icons">
+											<a href="#"><i class="fa fa-twitter"></i></a>
+											<a href="#"><i class="fa fa-facebook"></i></a>
+											<a href="#"><i class="fa fa-youtube"></i></a>
+										</div>
+									</div>
+									<!--end person-->
+								</div>
+								<!--end col-md-6-->
+							</div>
+							<!--end row-->
+						</section>
+					</div>
+					<!--end col-md-4-->
+					<div class="col-md-7 col-sm-7">
+						<section>
+							<h3>关于我们</h3>
+							<p>TE Studio是一个初创于几个编程爱好者的小小梦想，我们的成员有来自各个年龄，各个职位，各个方面的。 我们擅长着各个不同的领域，dos，c++，c#，java，html，php都有涉及，但这不影响我们集聚在一起，做自己 喜欢的事
+							</p>
+							<p>
+								我们的主要作品有
+								Color OS ; Light Net ; Lines ; Tepuint Clouds ; Tepuint OS ;
+								CB Shell ; Rain OS ; Dream OS ;
+							</p>
+						</section>
+						<section>
+							<h3>我们的分布</h3>
+							<div class="skill">
+								<h4>管理层</h4>
+								<aside>10%</aside>
+								<figure class="bar">
+									<div class="bar-active width-10"></div>
+									<div class="bar-background"></div>
+								</figure>
+							</div>
+							<!--end skill-->
+							<div class="skill">
+								<h4>开发人员</h4>
+								<aside>60%</aside>
+								<figure class="bar">
+									<div class="bar-active width-40"></div>
+									<div class="bar-background"></div>
+								</figure>
+							</div>
+							<!--end skill-->
+							<div class="skill">
+								<h4>美术、策划、BUGFeedback</h4>
+								<aside>30%</aside>
+								<figure class="bar">
+									<div class="bar-active width-30"></div>
+									<div class="bar-background"></div>
+								</figure>
+							</div>
+							<!--end skill-->
+						</section>
+					</div>
+					<!--end col-md-7-->
+				</div>
+				<!--end row-->
+			</div>
+			<!--end modal-body-->
+		</div>
+		<!--end modal-content-->
+	</div>
+	<!--end container-->
+</div>
+<!--end modal-dialog-->
+</div>
+<!--end #modal-about-us-->
+
+<!-- Modal Our Works -->
+<div class="modal fade" id="modal-our-works" tabindex="-1" role="dialog" aria-labelledby="modal-our-works-label">
+<div class="modal-dialog" role="document">
+	<div class="container">
+		<div class="modal-content">
+			<div class="modal-header" data-background-color="#8dff8b">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				<h2 class="modal-title" id="modal-our-works-label">我们的作品</h2>
+			</div>
+			<div class="modal-body">
+				<div class="row">
+					<div class="col-md-4 col-sm-4">
+						<a href="assets/img/1.bmp" class="work image-popup">
+							<div class="description">
+								<h4>Tepuint Clouds</h4>
+								<h5>By ColorOSMan</h5>
+							</div>
+							<!--end description-->
+							<div class="image">
+								<div class="bg-transfer"><img src="assets/img/1.bmp" alt=""></div>
+							</div>
+						</a>
+						<!--end work-->
+					</div>
+					<!--end col-md-4-->
+					<div class="col-md-4 col-sm-4">
+						<a href="assets/img/2.bmp" class="work image-popup">
+							<div class="description">
+								<h4>Light Net</h4>
+								<h5>By ColorOSMan</h5>
+							</div>
+							<!--end description-->
+							<div class="image">
+								<div class="bg-transfer"><img src="assets/img/2.bmp" alt=""></div>
+							</div>
+						</a>
+						<!--end work-->
+					</div>
+					<!--end col-md-4-->
+					<div class="col-md-4 col-sm-4">
+						<a href="assets/img/3.png" class="work image-popup">
+							<div class="description">
+								<h4>Lines</h4>
+								<h5>By ColorOSMan</h5>
+							</div>
+							<!--end description-->
+							<div class="image">
+								<div class="bg-transfer"><img src="assets/img/3.png" alt=""></div>
+							</div>
+						</a>
+						<!--end work-->
+					</div>
+					<!--end col-md-4-->
+					<div class="col-md-4 col-sm-4">
+						<a href="assets/img/4.png" class="work image-popup">
+							<div class="description">
+								<h4>Rain OS</h4>
+								<h5>By Songhairun007</h5>
+							</div>
+							<!--end description-->
+							<div class="image">
+								<div class="bg-transfer"><img src="assets/img/4.png" alt=""></div>
+							</div>
+						</a>
+						<!--end work-->
+					</div>
+					<!--end col-md-4-->
+					<div class="col-md-4 col-sm-4">
+						<a href="assets/img/5.png" class="work image-popup">
+							<div class="description">
+								<h4>CB Shell</h4>
+								<h5>By CubWolf</h5>
+							</div>
+							<!--end description-->
+							<div class="image">
+								<div class="bg-transfer"><img src="assets/img/5.png" alt=""></div>
+							</div>
+						</a>
+						<!--end work-->
+					</div>
+					<!--end col-md-4-->
+					<div class="col-md-4 col-sm-4">
+						<a href="assets/img/6.png" class="work image-popup">
+							<div class="description">
+								<h4>Tepuint OS</h4>
+								<h5>By TESTUDIO</h5>
+							</div>
+							<!--end description-->
+							<div class="image">
+								<div class="bg-transfer"><img src="assets/img/6.png" alt=""></div>
+							</div>
+						</a>
+						<!--end work-->
+					</div>
+					<!--end col-md-4-->
+				</div>
+				<!--end row-->
+			</div>
+			<!--end modal-body-->
+		</div>
+		<!--end modal-content-->
+	</div>
+	<!--end container-->
+</div>
+<!--end modal-dialog-->
+</div>
+<!--end #modal-our-works-->
+
+<!-- Modal Services -->
+<div class="modal fade" id="modal-services" tabindex="-1" role="dialog" aria-labelledby="modal-services-label">
+<div class="modal-dialog" role="document">
+	<div class="container">
+		<div class="modal-content">
+			<div class="modal-header" data-background-color="#ff6767">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				<h2 class="modal-title" id="modal-services-label">技术</h2>
+			</div>
+			<div class="modal-body">
+				<div class="row">
+					<div class="col-md-4 col-sm-4">
+						<div class="box">
+							<div class="icon">
+								<img src="assets/img/camera.png" alt="">
+							</div>
+							<h3>前沿技术</h3>
+							<p>TE STUDIO一直在尝试CMD的巅峰极致——Lines ；Tepuint Clouds ；Light Net等，只因为我们有优秀的
+							开发人员为Te做出卓越贡献</p>
+						</div>
+						<!--end box-->
+					</div>
+					<!--end col-md-4-->
+					<div class="col-md-4 col-sm-4">
+						<div class="box">
+							<div class="icon">
+								<img src="assets/img/computer.png" alt="">
+							</div>
+							<h3>UI绘图</h3>
+							<p>TE STUDIO有专业的美工大大，一上来各种Mac风，毛玻璃风，界面清新大方（Light Net）（Tepuint Clouds）等等</p>
+						</div>
+						<!--end box-->
+					</div>
+					<!--end col-md-4-->
+					<div class="col-md-4 col-sm-4">
+						<div class="box">
+							<div class="icon">
+								<img src="assets/img/compose.png" alt="">
+							</div>
+							<h3>规范Shell</h3>
+							<p>开发Shell自然又是TE STUDIO的一大优势，规范整齐，操作流畅，多彩显示，丝毫不输windows原生Cmd和PowerShell</p>
+						</div>
+						<!--end box-->
+					</div>
+					<!--end col-md-4-->
+					<div class="col-md-4 col-sm-4">
+						<div class="box">
+							<div class="icon">
+								<img src="assets/img/cloud.png" alt="">
+							</div>
+							<h3>云端支持</h3>
+							<p>Tepuint Clouds是基于Windows *的一款云端高性能存储软件，这款软件给用户提供了10G的免费储存空间并可以随时升级。用户可以在软件里在线注册并登录</p>
+						</div>
+						<!--end box-->
+					</div>
+					<!--end col-md-4-->
+					<div class="col-md-4 col-sm-4">
+						<div class="box">
+							<div class="icon">
+								<img src="assets/img/mail.png" alt="">
+							</div>
+							<h3>强大团队</h3>
+							<p>TE Studio是一个初创于几个编程爱好者的小小梦想，我们的成员有来自各个年龄，各个职位，各个方面的。 我们擅长着各个不同的领域，dos，c++，c#，java，html，php都有涉及</p>
+						</div>
+						<!--end box-->
+					</div>
+					<!--end col-md-4-->
+					<div class="col-md-4 col-sm-4">
+						<div class="box">
+							<div class="icon">
+								<img src="assets/img/magnifyingglass.png" alt="">
+							</div>
+							<h3>专业推广</h3>
+							<p>比其它任何Bat应用都不同的是，Te Studio把每一个作品都用心的做了一个官网，为的就是让大家都感受到Te对爱好也是认真的</p>
+						</div>
+						<!--end box-->
+					</div>
+					<!--end col-md-4-->
+				</div>
+			</div>
+			<!--end modal-body-->
+		</div>
+		<!--end modal-content-->
+	</div>
+	<!--end container-->
+</div>
+<!--end modal-dialog-->
+</div>
+<!--end #modal-services-->
+
+<!-- Modal Contact Us -->
+<div class="modal fade" id="modal-contact-us" tabindex="-1" role="dialog" aria-labelledby="modal-contact-us-label">
+<div class="modal-dialog" role="document">
+	<div class="container">
+		<div class="modal-content">
+			<div class="modal-header" data-background-color="#ffe858">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				<h2 class="modal-title" id="modal-contact-us-label">联系我们</h2>
+			</div>
+			<div id="map"></div>
+			<div class="modal-body">
+				<section>
+					<div class="row">
+						<div class="col-md-3 col-sm-3">
+							<h3>地址</h3>
+							<address>
+								master@testudio.online<br>
+								QQ-Group:734944426<br>
+								<a href="support:@testudio.online">support@testudio.online</a>
+							</address>
+						</div>
+						<!--end col-md-3-->
+						<div class="col-md-3 col-sm-3">
+							<h3>Social</h3>
+							<figure><a href="" class="icon"><i class="fa fa-facebook"></i>Facebook</a></figure>
+							<figure><a href="" class="icon"><i class="fa fa-twitter"></i>Twitter</a></figure>
+							<figure><a href="" class="icon"><i class="fa fa-youtube"></i>Youtube</a></figure>
+							<figure><a href="" class="icon"><i class="fa fa-pinterest"></i>Pinterest</a></figure>
+						</div>
+						<!--end col-md-3-->
+						<div class="col-md-6 col-sm-6">
+							<h3>Contact Form</h3>
+							<form id="form-contact" method="post" class="form clearfix inputs-underline">
+								<div class="row">
+									<div class="col-md-6 col-sm-6">
+										<div class="form-group">
+											<input type="text" class="form-control" id="form-contact-name" name="name" placeholder="Your Name" required>
+										</div>
+										<!--end form-group -->
+									</div>
+									<!--end col-md-6 col-sm-6 -->
+									<div class="col-md-6 col-sm-6">
+										<div class="form-group">
+											<input type="email" class="form-control" id="form-contact-email" name="email" placeholder="Your Email" required>
+										</div>
+										<!--end form-group -->
+									</div>
+									<!--end col-md-6 col-sm-6 -->
+								</div>
+								<!--end row -->
+								<div class="row">
+									<div class="col-md-12">
+										<div class="form-group">
+											<textarea class="form-control" id="form-contact-message" rows="5" name="message" placeholder="Your Message" required></textarea>
+										</div>
+										<!--end form-group -->
+									</div>
+									<!--end col-md-12 -->
+								</div>
+								<!--end row -->
+								<div class="form-group clearfix">
+									<button type="submit" class="btn pull-right btn-default btn-framed btn-rounded" id="form-contact-submit">Send a Message</button>
+								</div>
+								<!--end form-group -->
+								<div class="form-contact-status"></div>
+							</form>
+							<!--end form-contact -->
+						</div>
+						<!--end col-md-6-->
+					</div>
+				</section>
+			</div>
+			<!--end modal-body-->
+		</div>
+		<!--end modal-content-->
+	</div>
+	<!--end container-->
+</div>
+<!--end modal-dialog-->
+</div>
+<!--end #modal-contact-us-->
+
+<script  src="assets/js/jquery-2.2.1.min.js"></script>
+<script  src="http://ditu.google.cn/maps/api/js"></script>
+<script  src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script  src="assets/js/jquery.validate.min.js"></script>
+<script  src="assets/js/jquery.magnific-popup.min.js"></script>
+<script  src="assets/js/TweenLite.min.js"></script>
+<script  src="assets/js/EasePack.min.js"></script>
+<script  src="assets/js/exploding-triangles.js"></script>
+<script  src="assets/js/custom.js"></script>
+
+<script>
+
+var latitude = 34.038405;
+var longitude = -117.946944;
+var markerImage = "assets/img/map-marker.png";
+var mapTheme = "light";
+var mapElement = "map";
+
+$(".modal").on("shown.bs.modal", function (e) {
+	google.maps.event.addDomListener(window, 'load', simpleMap(latitude, longitude, markerImage, mapTheme, mapElement));
+});
+
+</script>
+
+</body>
 
