--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 					</div>
 					<!--end col-md-4-->
 					<div class="col-md-4 col-sm-4">
-					<a href="http://ln.testudio.online">跳转官网</a>
+					<a href="http://lnet.testudio.online">跳转官网</a>
 						<a href="assets/img/2.bmp" class="work image-popup">
 							<div class="description">
 								<h4>Light Net</h4>
