--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 											<div class="bg-transfer"><img src="assets/img/person-01.jpg" alt=""></div>
 										</div>
 										<h4>CubWolf</h4>
-										<h5>团队主负责人</h5>
+										<h5>Te Studio联合创始人</h5>
 										<div class="social-icons">
 											<a href="#"><i class="fa fa-twitter"></i></a>
 											<a href="#"><i class="fa fa-facebook"></i></a>
@@ -106,7 +106,7 @@
 											<div class="bg-transfer"><img src="assets/img/person-02.jpg" alt=""></div>
 										</div>
 										<h4>ColorOSMan</h4>
-										<h5>团队副负责人</h5>
+										<h5>Te Studio联合创始人</h5>
 										<div class="social-icons">
 											<a href="#"><i class="fa fa-twitter"></i></a>
 											<a href="#"><i class="fa fa-facebook"></i></a>
